Changes needed to build Homestead with PyPy

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,8 +4,6 @@ parts =
   coverage
   python
   tornado
-  pycrypto
-  pybcrypt
 develop = 
   .
 eggs = 
@@ -20,17 +18,7 @@ eggs =
 [tornado]
 recipe = zc.recipe.egg
 eggs =
-  tornado ==2.3
-  
-[pycrypto]
-recipe = zc.recipe.egg
-eggs =
-  pycrypto ==2.6
-  
-[pybcrypt]
-recipe = zc.recipe.egg
-eggs =
-  py-bcrypt ==0.2
+  tornado
   
 [python]
 recipe = zc.recipe.egg
@@ -39,4 +27,4 @@ eggs =
   ${coverage:eggs}
   ${tornado:eggs}
   ${buildout:eggs}
-  ${pycrypto:eggs}
+
